--- a/week_3/pizza_task/style.css
+++ b/week_3/pizza_task/style.css
@@ -1,3 +1,52 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  margin-top: 0.2rem;
+}
+h1 {
+  align-items: center;
+  height: 5rem;
+}
+h2 {
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+}
 body {
-  background-color: rgb(201, 255, 255);
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#section1 {
+  width: 30vw;
+  background: url(pizza.jpeg) no-repeat fixed center center/cover;
+  height: 100vw;
+  border-right-style: groove;
+  border-color: crimson;
+}
+#section2 {
+  display: flex;
+  width: 40vw;
+  background-color: rgb(255, 255, 255);
+}
+#section3 {
+  width: 30vw;
+  background-color: rgb(255, 255, 255);
+  border-left-style: groove;
+  border-color: crimson;
+}
+
+#section2,
+#section3 {
+  padding: 2rem;
+}
+input[type="radio"],
+input[type="checkbox"] {
+  float: left;
+  margin-right: 10px;
+  font-family: inherit;
+}
+input [type="text"],
+option {
+  font-family: inherit;
 }
