--- a/week_3/pizza_task/style.css
+++ b/week_3/pizza_task/style.css
@@ -2,43 +2,59 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  margin-top: 0.2rem;
+  margin-top: 0.3rem;
 }
 h1 {
   align-items: center;
-  height: 5rem;
+  height: 4rem;
+  color: #224f00;
+  border-bottom-style: groove;
+  border-color: #46a200;
+  border-width: 1px;
 }
 h2 {
   padding-bottom: 0.5rem;
-  padding-top: 0.5rem;
+  padding-top: 1.5rem;
+  color: #224f00;
+}
+h4 {
+  color: #224f00;
+  padding-bottom: 0.5rem;
 }
 body {
   display: flex;
   flex-direction: row;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 #section1 {
-  width: 30vw;
+  width: 40vw;
   background: url(pizza.jpeg) no-repeat fixed center center/cover;
   height: 100vw;
   border-right-style: groove;
-  border-color: crimson;
+  border-color: #46a200;
+  border-width: 2px;
 }
 #section2 {
   display: flex;
-  width: 40vw;
+  width: 35vw;
   background-color: rgb(255, 255, 255);
+  flex-direction: column;
+  align-items: center;
 }
 #section3 {
-  width: 30vw;
+  width: 25vw;
   background-color: rgb(255, 255, 255);
   border-left-style: groove;
-  border-color: crimson;
+  border-color: #46a200;
+  border-width: 2px;
+  display: flex;
+  flex-direction: column;
 }
 
 #section2,
 #section3 {
-  padding: 2rem;
+  padding: 2.5rem;
 }
 input[type="radio"],
 input[type="checkbox"] {
@@ -49,4 +65,19 @@ input[type="checkbox"] {
 input [type="text"],
 option {
   font-family: inherit;
+}
+#selectedDel {
+  padding-bottom: 1rem;
+}
+#totalPrice {
+  padding-top: 1rem;
+  border-top-style: groove;
+  border-color: #46a200;
+  border-width: 1px;
+}
+#selectedSize,
+#totalToppings,
+#selectedDel,
+#displayName {
+  margin-top: 2rem;
 }
