--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -37,6 +37,8 @@ p,
   align-items: center;
   justify-content: center;
   font-size: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   /* text-align: center; */
 }
 .btn {
@@ -49,4 +51,17 @@ p,
   width: 10rem;
   font-size: inherit;
   box-shadow: none;
+}
+.modal {
+  display: none;
+  background-color: white;
+  color: #000000;
+  font-family: inherit;
+  height: 50vh;
+  width: 50vw;
+  border-radius: 50px;
+  padding: 2rem;
+  position: absolute;
+  top: 100px;
+  text-align: center;
 }
