--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -5,9 +5,8 @@
 }
 
 body {
-  background: linear-gradient(to top, #fff700, #ff0000);
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  background: linear-gradient(to top, #ffffff, #a0f2ff);
+  font-family: 'Nova Mono', monospace;
   height: 100vh;
 }
 form {
@@ -22,6 +21,9 @@ p,
 #circles {
   padding: 2rem;
 }
+h1 {
+  font-size: 3rem;
+}
 #circles {
   display: flex;
   flex-direction: row;
@@ -30,9 +32,10 @@ p,
   display: flex;
   height: 20vh;
   width: 20vh;
-  background: linear-gradient(to top, #ff0000, #fff700);
+  background: linear-gradient(to top, #b0faff, #ffffff);
   padding: 2rem;
-  border: solid;
+  border: none;
+  border-color: #ffffff;
   border-radius: 100%;
   align-items: center;
   justify-content: center;
@@ -43,8 +46,8 @@ p,
 }
 .btn {
   padding: 0.5rem;
-  background: linear-gradient(to top, #fff700, #ff0000);
-  color: #ffffff;
+  background: linear-gradient(to top, #ffffff, #b0faff);
+  color: #000000;
   border-radius: 20px;
   border-style: hidden;
   font-family: inherit;
@@ -59,9 +62,10 @@ p,
   font-family: inherit;
   height: 50vh;
   width: 50vw;
+  border-style: solid;
   border-radius: 50px;
   padding: 2rem;
   position: absolute;
   top: 100px;
-  text-align: center;
+  justify-content: center;
 }
