fixing_modal_trying_to_fix_circle_spam

--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -21,6 +21,7 @@ p,
 #circles {
   padding: 2rem;
 }
+
 h1 {
   font-size: 3rem;
 }
@@ -58,10 +59,23 @@ h1 {
   font-size: inherit;
   box-shadow: none;
 }
-
+.overlay {
+  background-color: #00000080;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.overlay.visible {
+  display: flex;
+}
 .modal {
   display: none;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.912);
   color: #000000;
   font-family: inherit;
   height: 50vh;
@@ -72,18 +86,31 @@ h1 {
   position: absolute;
   top: 100px;
   justify-content: center;
+  text-align: center;
 }
 .btn.close {
+  position: absolute;
+  bottom: 2rem;
   padding: 0.5rem;
   background-color: rgb(255, 0, 0);
   color: #ffffff;
   border-radius: 20px;
   border-style: hidden;
   font-family: inherit;
-  width: 2rem;
+  width: 90%;
   font-size: inherit;
   box-shadow: none;
-  position: absolute;
-  right: 2rem;
-  top: 2rem;
+}
+#close {
+  display: flex;
+  justify-content: center;
+}
+#endButton {
+  display: none;
+}
+.btn.hide {
+  display: none;
+}
+.btn.end {
+  display: block;
 }
