--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -52,7 +52,7 @@ h1 {
   padding: 0.5rem;
   background-color: #b0faff;
   color: #000000;
-  border-radius: 20px;
+  border-radius: 100%;
   border-style: hidden;
   font-family: inherit;
   width: 10rem;
@@ -80,8 +80,8 @@ h1 {
   font-family: inherit;
   height: 50vh;
   width: 50vw;
-  border-style: solid;
-  border-radius: 50px;
+  /* border-style: solid; */
+  border-radius: 100%;
   padding: 2rem;
   position: absolute;
   top: 100px;
@@ -92,12 +92,12 @@ h1 {
   position: absolute;
   bottom: 2rem;
   padding: 0.5rem;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(0, 93, 127);
   color: #ffffff;
-  border-radius: 20px;
+  border-radius: 100%;
   border-style: hidden;
   font-family: inherit;
-  width: 90%;
+  width: 40%;
   font-size: inherit;
   box-shadow: none;
 }
@@ -105,7 +105,7 @@ h1 {
   display: flex;
   justify-content: center;
 }
-#endButton {
+.btn.last {
   display: none;
 }
 .btn.hide {
