--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -53,11 +53,12 @@ h1 {
 .circle.bg {
   background: rgba(0, 128, 0, 0);
   border: solid;
+  border-width: 0.5px;
   border-color: white;
 }
 .btn {
   padding: 0.5rem;
-  background-color: #2f4344;
+  background-color: hsla(183, 18%, 23%, 0.717);
   border-radius: 100%;
   border-style: hidden;
   font-family: inherit;
@@ -87,7 +88,8 @@ h1 {
   font-family: inherit;
   height: 50vh;
   width: 50vw;
-  /* border-style: solid; */
+  border-style: solid;
+  border-width: 1px;
   border-radius: 100%;
   padding: 2rem;
   position: absolute;
@@ -120,13 +122,22 @@ h1 {
 }
 .btn.end {
   display: block;
-  background-color: rgb(255, 146, 146);
+  background-color: rgba(255, 146, 146, 0.703);
 }
 @media (max-width: 576px) {
   #circles {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+  }
+  body {
+    text-align: center;
+  }
+  h1,
+  p,
+  #gameButtons,
+  #circles {
+    padding: 1rem;
   }
   .circle {
     height: 110px;
@@ -141,13 +152,19 @@ h1 {
     height: 50%;
     width: 90%;
   }
+  form {
+    padding-top: 0px;
+  }
 }
 @media (max-height: 450px) {
   h1,
   p,
   #gameButtons,
   #circles {
-    padding: 0.8rem;
+    padding: 0.5rem;
+  }
+  form {
+    padding-top: 0.2rem;
   }
   .circle {
     height: 110px;
