--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -11,6 +11,8 @@ body {
   font-family: "Nova Mono", monospace;
   height: 100vh;
   color: white;
+  text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00,
+    0 0 40px #00ff00, 0 0 50px #00ff00, 0 0 60px #00ff00, 0 0 70px #00ff00;
 }
 form {
   display: flex;
@@ -24,11 +26,16 @@ p,
 #circles {
   padding: 2rem;
 }
-
+h2,
+h3,
+p {
+  text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
+}
 h1 {
   font-size: 3rem;
   color: white;
 }
+
 #circles {
   display: flex;
   flex-direction: row;
@@ -58,13 +65,15 @@ h1 {
 }
 .btn {
   padding: 0.5rem;
-  background-color: hsla(183, 18%, 23%, 0.717);
+  background-color: hsla(0, 0%, 0%, 0.277);
   border-radius: 100%;
-  border-style: hidden;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px;
   font-family: inherit;
-  width: 10rem;
+  width: 15rem;
   font-size: inherit;
-  box-shadow: none;
+  /*  box-shadow: none; */
   color: white;
 }
 .overlay {
@@ -86,11 +95,14 @@ h1 {
   background-color: rgba(0, 0, 0, 0.775);
   color: #ffffff;
   font-family: inherit;
+  font-size: 1.3rem;
   height: 50vh;
   width: 50vw;
   border-style: solid;
   border-width: 1px;
   border-radius: 100%;
+  /*   box-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff,
+    0 0 40px #00ff00, 0 0 50px #00ff00, 0 0 60px #00ff00, 0 0 70px #00ff00; */
   padding: 2rem;
   position: absolute;
   top: 100px;
@@ -101,14 +113,16 @@ h1 {
   position: absolute;
   bottom: 2rem;
   padding: 0.5rem;
-  background-color: rgb(0, 93, 127);
+  background-color: rgba(4, 4, 4, 0.22);
   color: #ffffff;
   border-radius: 100%;
-  border-style: hidden;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px;
   font-family: inherit;
   width: 40%;
   font-size: inherit;
-  box-shadow: none;
+  /* box-shadow: none; */
 }
 #close {
   display: flex;
@@ -122,7 +136,8 @@ h1 {
 }
 .btn.end {
   display: block;
-  background-color: rgba(255, 146, 146, 0.703);
+  background-color: rgba(0, 0, 0, 0.255);
+  box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px;
 }
 @media (max-width: 576px) {
   #circles {
@@ -151,6 +166,7 @@ h1 {
   .modal {
     height: 50%;
     width: 90%;
+    font-size: 1.1rem;
   }
   form {
     padding-top: 0px;
