--- a/week_5/speed_game/style.css
+++ b/week_5/speed_game/style.css
@@ -5,20 +5,34 @@
 }
 
 body {
-  background: rgb(83, 83, 83) url(darkspace.avif) no-repeat fixed center
+  background: rgb(83, 83, 83) url(asteroidbg.webp) no-repeat fixed center
     center/cover;
-  /*  background: rgb(9, 75, 0) center/cover; */
+  /*   /https://www.unrealengine.com/marketplace/en-US/product/asteroid-field-with-asteroid-stations-pack */
   font-family: "Nova Mono", monospace;
   height: 100vh;
   color: white;
   text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00,
     0 0 40px #00ff00, 0 0 50px #00ff00, 0 0 60px #00ff00, 0 0 70px #00ff00;
 }
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.743);
+  z-index: -1;
+}
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
+}
+#layer {
+  height: 100%;
+  width: 100%;
 }
 h1,
 p,
@@ -58,7 +72,7 @@ h1 {
   /* text-align: center; */
 }
 .circle.bg {
-  background: rgba(0, 128, 0, 0);
+  background: rgba(0, 0, 0, 0);
   border: solid;
   border-width: 0.5px;
   border-color: white;
