--- a/week_7/Pokedex/style.css
+++ b/week_7/Pokedex/style.css
@@ -38,9 +38,10 @@ body {
   border-color: var(--secondary-color-1);
   text-transform: capitalize;
   filter: grayscale(50%);
+  transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
 }
 .pokeCard:hover {
-  box-shadow: 0px 10px 20px hsla(0, 0%, 100%, 0.5);
+  box-shadow: 0px 0px 20px hsla(0, 0%, 100%, 0.268);
   transform: translateY(-5px);
   filter: grayscale(0%);
 }
