--- a/week_7/Pokedex/style.css
+++ b/week_7/Pokedex/style.css
@@ -38,7 +38,7 @@ body {
   border-color: var(--secondary-color-1);
   text-transform: capitalize;
   filter: grayscale(50%);
-  transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
+  transition: 0.2s ease;
 }
 .pokeCard:hover {
   box-shadow: 0px 0px 20px hsla(0, 0%, 100%, 0.268);
