--- a/week_7/Pokedex/style.css
+++ b/week_7/Pokedex/style.css
@@ -7,8 +7,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-h1 {
+h1,
+h2 {
   color: white;
+  margin-bottom: 1rem;
 }
 body {
   background-color: rgb(0, 0, 0);
@@ -16,6 +18,14 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: center;
   margin-top: 5vh;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#introTitle {
+  display: block;
 }
 #pokeCards {
   display: flex;
@@ -26,11 +36,40 @@ body {
   color: white;
   margin-top: 50px;
 }
+.pokeType {
+  color: black;
+}
+#type {
+  height: 50px;
+  width: 50px;
+}
+#gens {
+  margin: 2rem;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+button {
+  font-family: inherit;
+  height: 2rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  background-color: var(--secondary-color-1);
+  filter: grayscale(50%);
+  color: white;
+  transition: 0.2s ease;
+  border: none;
+  border-radius: 10px;
+}
+button:hover {
+  filter: grayscale(0%);
+}
 .pokeCard {
   display: flex;
-  height: 15rem;
-  width: 10rem;
-  background: linear-gradient(to top, #e1f7ff, #ffffff);
+  height: fit-content;
+  width: 15rem;
+  background: linear-gradient(to top, #73efff, #ffffff);
   border-radius: 10px;
   flex-direction: column;
   border: solid;
@@ -40,13 +79,23 @@ body {
   filter: grayscale(50%);
   transition: 0.2s ease;
 }
+.pokeType {
+  display: flex;
+}
 .pokeCard:hover {
   box-shadow: 0px 0px 20px hsla(0, 0%, 100%, 0.268);
   transform: translateY(-5px);
   filter: grayscale(0%);
 }
-
-.pokeName {
+#search {
+  display: none;
+  width: 20rem;
+  height: 2rem;
+  border: none;
+  font-family: inherit;
+  padding: 0.5rem;
+}
+.pokeInfo {
   display: flex;
   width: 100%;
   height: 20%;
@@ -56,6 +105,44 @@ body {
   align-items: center;
 }
 img {
-  height: 80%;
   padding: 0.5rem;
+}
+#type {
+  height: 40px;
+}
+.dropbtn {
+  background-color: var(--secondary-color-1);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-top: 2rem;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--secondary-color-1);
+  filter: grayscale(50%);
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: rgb(255, 0, 0);
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  filter: grayscale(0%);
 }
